// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-hdyzPZ bCdTFE"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
Array [
  <p
    className="sc-hdyzPZ bCdTFE"
  >
    Default color is Bulma
  </p>,
  <p
    className="sc-hdyzPZ gmazdZ"
    color="piccolo.100"
  >
    Piccolo
  </p>,
  <p
    className="sc-hdyzPZ duscMz"
    color="trunks.100"
  >
    Trunks
  </p>,
  <p
    className="sc-hdyzPZ gztQoR"
    color="krillin.100"
  >
    Krillin
  </p>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <p
    className="sc-hdyzPZ bCdTFE"
  >
    Default font-weight is regular
  </p>,
  <p
    className="sc-hdyzPZ cDrvoi"
  >
    Font-weight is bold
  </p>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <p
    className="sc-hdyzPZ bCdTFE"
  >
    Line-height is pre-calculated
  </p>,
  <p
    className="sc-hdyzPZ bhmvpZ"
  >
    Custon line-height
  </p>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <p
    className="sc-hdyzPZ bCdTFE"
  >
    Paragraph is a default tag
  </p>,
  <span
    className="sc-hdyzPZ bCdTFE"
  >
    Span tag
  </span>,
  <label
    className="sc-hdyzPZ bCdTFE"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <p
    className="sc-hdyzPZ bCdTFE"
  >
    Default font-size is 16px
  </p>,
  <p
    className="sc-hdyzPZ ijnnzv"
    size={24}
  >
    Size is 24px
  </p>,
  <p
    className="sc-hdyzPZ ceNfrD"
    size={48}
  >
    Size is 48px
  </p>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <p
    className="sc-hdyzPZ bCdTFE"
  >
    Text-align is not specified
  </p>,
  <p
    className="sc-hdyzPZ cfsdr"
  >
    Centered Text
  </p>,
  <p
    className="sc-hdyzPZ wMsQE"
  >
    Right alignment
  </p>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <p
    className="sc-hdyzPZ bCdTFE"
  >
    Default text-decoration is none
  </p>,
  <p
    className="sc-hdyzPZ iIiWzB"
  >
    Underline Text
  </p>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <p
    className="sc-hdyzPZ bCdTFE"
  >
    Default text-transform is none
  </p>,
  <p
    className="sc-hdyzPZ dJvbrn"
  >
    Uppercase Text
  </p>,
]
`;
